--- a/Booking Appointment App/style.css
+++ b/Booking Appointment App/style.css
@@ -24,3 +24,8 @@ input[type='submit'] {
     color: white !important; 
     width: 100%;
 }
+
+#userList {
+    text-align: center;
+    list-style-position: inside;
+}
